<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_ground"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/TextviewRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:text="@string/inscription"
        android:textColor="#0F357E"
        android:textSize="17dp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="330dp"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
      
        android:background="@drawable/bg_blanc_transpmoyen"
        android:orientation="vertical"
        android:padding="2dp" >

        <RadioGroup
            android:id="@+id/radioSex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/radioMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/homme"
                android:textColor="#0F357E"
                android:textSize="17sp" />

            <RadioButton
                android:id="@+id/radioFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/femme"
                android:textColor="#0F357E"
                android:textSize="17sp" />
        </RadioGroup>

        <EditText
            android:id="@+id/inputCin"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:background="@drawable/shape_bg"
            android:ems="10"
            android:hint="@string/cin"
            android:textColor="#0F357E" />

        <EditText
            android:id="@+id/inputemail"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/shape_bg"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="#0F357E" />

        <EditText
            android:id="@+id/inputtel"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/shape_bg"
            android:ems="10"
            android:hint="@string/numero_telephoneh"
            android:inputType="phone"
            android:textColor="#0F357E" />

        <EditText
            android:id="@+id/inputdatenaissance"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/shape_bg"
            android:ems="10"
            android:hint="@string/datenaissance"
            android:textColor="#0F357E" />

        <EditText
            android:id="@+id/inputlieunaissance"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/shape_bg"
            android:ems="10"
            android:hint="@string/lieunaissance"
            android:textColor="#0F357E" />

        <EditText
            android:id="@+id/inputmdp"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/shape_bg"
            android:ems="10"
            android:hint="@string/mot_de_passe_"
            android:inputType="textPassword"
            android:textColor="#0F357E" />

        <EditText
            android:id="@+id/inputmdp2"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/shape_bg"
            android:ems="10"
            android:hint="@string/confmot_de_passe"
            android:inputType="textPassword"
            android:textColor="#0F357E" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnOK"
            android:layout_width="88dp"
            android:layout_height="33dp"
            android:layout_gravity="center"
            android:background="@drawable/bouton_bg"
            android:text="@string/buttonvalider"
            android:textColor="#0F357E" />

        <Button
            android:id="@+id/btnAnnulerInscrip"
            android:layout_width="88dp"
            android:layout_height="33dp"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:background="@drawable/bouton_bg"
            android:text="@string/annuler"
            android:textColor="#0F357E" />
    </LinearLayout>

</LinearLayout>