<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_ground"
    android:orientation="vertical" >
<TextView
            android:id="@+id/textViewcntinf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/contactinfo"
            android:textColor="#0F357E"
            android:textSize="17dp"
            android:textStyle="bold" />
 <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_blanc"
        android:orientation="vertical" >

    <LinearLayout
        android:layout_width="280dp"
        android:layout_height="300dp"
        android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
        android:background="@drawable/bg_blanc_transpmoyen"
        android:orientation="vertical" >

        

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:layout_marginTop="10dp"
            android:drawableLeft="@drawable/ic_email"
            android:text="@string/textview2"
            android:textColor="#0F357E" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:drawableLeft="@drawable/ic_tel"
            android:text="@string/textview3"
            android:textColor="#0F357E" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:drawableLeft="@drawable/ic_fax"
            android:text="@string/textview4"
            android:textColor="#0F357E" />

        <TextView
            android:id="@+id/textViewsend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="30dp"
            android:text="@string/rens"
            android:textColor="#0F357E" />

        <EditText
            android:id="@+id/editNom"
            android:layout_width="214dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/shape_bg"
            android:ems="10"
            android:hint="@string/nom"
            android:textColor="#0F357E"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editMail"
            android:layout_width="214dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:background="@drawable/shape_bg"
            android:ems="10"
            android:hint="@string/email"
            android:textColor="#0F357E"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editRenseignement"
            android:layout_width="214dp"
            android:layout_height="44dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/renseignement_patch"
            android:ems="10"
            android:hint="@string/renseignement"
            android:textColor="#0F357E"
            android:textSize="16sp" />
    </LinearLayout>
  </LinearLayout>
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/ButtonSend"
            android:layout_width="88dp"
            android:layout_height="33dp"
            android:background="@drawable/bouton_bg"
            android:text="@string/envoyer"
            android:textColor="#0F357E" />

        <Button
            android:id="@+id/ButtonAnnuler"
            android:layout_width="88dp"
            android:layout_height="33dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/bouton_bg"
            android:text="@string/annuler"
            android:textColor="#0F357E" />
    </LinearLayout>

</LinearLayout>