<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >


            <item
                android:id="@+id/action_devise"
                android:icon="@drawable/ic_devise"
                android:showAsAction="always"
                android:title="@string/action_devise">
              <menu android:id="@+id/sousmenu" >
               <item
                android:id="@+id/action_euro"
                android:icon="@drawable/ic_euro"
                android:showAsAction="never"
                android:title="@string/action_euro"/>
               <item
                android:id="@+id/action_dollar"
                android:icon="@drawable/ic_dollar"
                android:showAsAction="never"
                android:title="@string/action_dollar"/>
        </menu>
    </item>

</menu>