<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_ground"
    android:orientation="vertical"
    android:padding="16dp" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
         android:textColor="#000033"
        android:textSize="18dp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:text="@string/chercher_votre_destination" />

    <TextView
        android:id="@+id/from_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/from"
        android:textColor="#000033"
        android:textSize="17dp" />

    <AutoCompleteTextView
        android:id="@+id/from"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:completionThreshold="3" />

    <TextView
        android:id="@+id/to_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to"
        android:textColor="#000033"
        android:textSize="17dp" />

    <AutoCompleteTextView
        android:id="@+id/to"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:completionThreshold="3" />

    <Button
        android:id="@+id/load_directions"
        android:layout_width="216dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/bouton_bg"
        android:drawableRight="@drawable/loop"
        android:text="@string/load_directions"
        android:textColor="#000033" />

</LinearLayout>